[package]
name        = "cy-tls"
version     = "0.5.6"
edition     = "2021"
rust-version = "1.75"
description = "Cybrium SSL/TLS posture scanner — full probe suite, JSONL streaming, HSTS preload lookup."
license     = "Apache-2.0"
repository  = "https://github.com/cybrium-ai/cy-tls"
homepage    = "https://cybrium.ai"
readme      = "README.md"
keywords    = ["tls", "ssl", "security", "scanner", "ctem"]
categories  = ["command-line-utilities", "cryptography"]

[[bin]]
name = "cy-tls"
path = "src/main.rs"

[dependencies]
# CLI
clap         = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio        = { version = "1.38", features = ["rt-multi-thread", "net", "io-util", "io-std", "macros", "time", "sync"] }
futures      = "0.3"

# TLS (modern stack — TLS 1.2 + 1.3 handshakes)
rustls       = { version = "0.23", features = ["ring", "logging"] }
tokio-rustls = { version = "0.26", features = ["early-data"] }
webpki-roots = "0.26"
rustls-pki-types = "1.7"

# Cert parsing
x509-parser  = "0.16"

# Raw protocol probing (legacy versions, ROBOT/FREAK, etc. — bypasses
# rustls so we can send malformed handshakes deliberately)
byteorder    = "1.5"

# HTTP probes (HSTS header, OCSP fetch)
ureq         = { version = "2.10", default-features = false, features = ["tls"] }

# Embedded UI server (cy-tls gui)
axum         = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }

# MCP server (cy-tls mcp — JSON-RPC over stdio)
jsonrpc-core = "18"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Time + errors
chrono       = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
anyhow       = "1"
thiserror    = "1"

# Logging
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Hash + hex for DH common-prime fingerprinting
sha2         = "0.10"
hex          = "0.4"

# Big-integer modular exponentiation — needed for ROBOT active probe
# (must craft RSA-encrypted ClientKeyExchange variants with deliberately
# malformed PKCS#1 v1.5 padding; can't use the rsa crate's encrypt path
# because it enforces correct padding)
num-bigint   = "0.4"
num-traits   = "0.2"

# TLS 1.2 record-layer crypto for post-handshake active probes
# (GOLDENDOODLE / Zombie POODLE / OpenSSL AES-NI padding oracle).
# Build our own handshake state machine so we can inject deliberately
# malformed application-data records that rustls would otherwise refuse.
aes          = "0.8"
cbc          = { version = "0.1", features = ["block-padding"] }
hmac         = "0.12"
sha1         = "0.10"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
